Add docs for all collection endpoints
