# backend/internal/types/requests.go
@@ -10,3 +10,11 @@ type RegisterRequest struct {
 	Password string `json:"password"`
 	Username string `json:"username"`
 }
+
+type CreateCollectionRequest struct {
+	Name string `json:"name"`
+}
+
+type UpdateCollectionRequest struct {
+	Name string `json:"name"`
+}
