# backend/internal/types/responses.go
@@ -18,3 +18,13 @@ type LogoutResponse struct {
 type RegisterResponse struct {
 	Email string `json:"email"`
 }
+
+type ListResponse struct {
+	Data  []any `json:"data"`
+	Count int   `json:"count"`
+}
+
+type ListCollectionsResponse struct {
+	ListResponse
+	Data []Collection `json:"data"`
+}
